[tool.poetry]
name = "just-count"
version = "0.2.0"
description = ""
authors = ["AnneliesVlaar <66774020+AnneliesVlaar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "just_count", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
